static/css/main.css
/* ... */
.user-follow-extended .body .user-follow .url {
  display: block;
  clear: both;
}

/*----------------------------------------------
  UIMODULE: Image

  (.image-content-list)
    .image-title
    .image-content
---------------------------------------------- */

.image-content .the-image .nsfw-cover {
  background-color: #333;
  color: #fff;
  font-size: 14px;
  font-weight: bold;
  text-align: center;
  padding: 40px 0;
}

.image-content .the-image .nsfw-cover p {
  margin: 20px 0;
}

.image-content .the-image .nsfw-cover a {
  color: #00aeff;
}

.image-content .image-content-footer {
  font-size: 12px;
  color: #888;
  padding-top: 5px;
}


.image-content .image-content-footer .originally-posted-by {
  clear: left;
  padding-bottom: 3px;
}

.image-content-footer .created-at {
  padding-top: 7px;
  float: left;
}

.image-content .image-content-footer .created-at a {
 color: #888;
 text-decoration: none;
}

.image-content .image-content-footer .created-at a:hover {
  color: #666;
  text-decoration: underline;
}

.image-content-footer .stats {
  list-style: none;
  margin: 0 0 0 10px;
  padding: 0;
  color: #4b4b4b;
  float: left;
}

.image-content-footer .stats li {
  float: left;
  font-size: 12px;
  padding-right: 5px;
}

.image-content-footer .stats .views {
  padding-top: 7px;
  display: block;
  float: left;
}

.image-content-footer .stats li a {
  text-decoration: none;
  padding: 7px 7px 10px 25px;
  -webkit-border-top-left-radius: 5px;
  -webkit-border-top-right-radius: 5px;
  -moz-border-radius-topleft: 5px;
  -moz-border-radius-topright: 5px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  display: block;
  float: left;
}

.image-content-footer .stats li a:focus {
  outline: none;
}

.image-content-footer .stats li.saves a {
  background: url('/static/images/save-tiny.svg') 5px 8px no-repeat;
  background-size: 16px 11px;
  padding-left: 24px;
  color: #ff8400;
}

.image-content-footer .stats li.likes a {
  background: url('/static/images/like-tiny.svg') 5px 8px no-repeat;
  background-size: 12px 9px;
  padding-left: 20px;
  color: #ff0000;
}

.image-content-footer .stats li.comments a {
  background: url('/static/images/comment-tiny.svg') 5px 8px no-repeat;
  background-size: 12px 9px;
  padding-left: 20px;
  color: #00aeff;
}

.image-content-footer .stats li.selected a {
  background-color: #f4f4f4;
}

.image-content-footer .stats li.likes a span {
  display: none;
}

.image-content-footer .stats li.saves a span {
  display: none;
}

.image-content .image-content-footer a {
  color: #ff0099;
}

.image-content .image-content-footer a:hover,
.image-content .image-content-footer a:focus,
.image-content .image-content-footer a:active {
  color: #0088f1;
}

/* list overrides */
.image-content-list .image-content {
  float: none;
  padding: 0 15px 15px;
  border-bottom: 1px dashed #e0e0e0;
}

@media screen and (min-width: 768px) {
  .image-content-list .image-content {
    padding: 0 40px 40px;
  }
}

.image-content-list .image-content {
  padding-top: 0;
}

.image-content-list .remove-from-shake {
  position: absolute;
  width: 21px;
  height: 21px;
  top: 15px;
  right: -5px;
}

@media screen and (min-width: 768px) {
  .image-content-list .remove-from-shake {
    top: 45px;
    right: 10px;
  }
}

/* Inline editing title */
.image-title {
  padding: 15px 15px 0;
  position: relative;
  max-width: 100%;
}

.image-title h1,
.image-title h3 {
  word-wrap: break-word;
  overflow-wrap: break-word;
}

@media screen and (min-width: 768px) {
  .image-title {
    padding: 40px 40px 0;
  }
}

.image-title h3 {
  font-size: 30px;
  font-weight: bold;
  color: #333;
  margin-bottom: 20px;
}

.image-edit-title-hover {
  background-color: #fcff00;
}

.image-edit-title-form {
  display: none;
  margin-bottom: 20px;
}

.image-content-list .image-edit-title-form .title-input {
  font-size: 30px;
  font-weight: bold;
  border: 1px solid #ccc;
  padding: 2px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

.image-edit-title-form .title-input {
  font-size: 48px;
  font-weight: bold;
  max-width: 100%;
  box-sizing: border-box;
}

/* TODO replace with reusable button styles */
.image-edit-title-form .buttons {
  padding-top: 10px;
  padding-bottom: 10px;
  display: flex;
}

.image-edit-title-form .save {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  border: 1px solid #FF0080;
  background-color: #FF0080;
  color: #fff;
  font-size: 18px;
  font-weight: bold;
  padding: 10px 20px;
}

.image-edit-title-form .or {
  padding: 10px;
  display: block;
  color: #888;
}

.image-edit-title-form .cancel {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  border: 1px solid #e0e0e0;
  background-color: #f5f5f5;
  color: #666;
  font-size: 18px;
  font-weight: bold;
  padding: 10px 20px;
  text-decoration: none;
}

/* Inline Editing Description */

.image-content .description {
  color: #333;
  font-size: 14px;
  padding-bottom: 10px;
  line-height: 1.3;
  overflow: hidden;
}

.image-content .the-description {
  word-break: break-word;
  word-wrap: break-word;
  overflow-wrap: break-word;
}

.image-content .description-edit-form {
  display: none;
}

.image-content .the-description-hover {
  background-color: #fcff00;
}

.image-content .the-description-blank {
  color: #999;
  font-style: italic;
}

.image-content .description textarea {
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 5px;
  height: 100px;
}

textarea {
  width: 100%;
  min-height: 2.15em;
  box-sizing: border-box;
  resize: vertical;
}

.image-content .description .buttons {
  padding: 10px 0;
}
/* ... */

